<?xml version="1.0"?>
<package format="2">
  <name>sema_gpio</name>
  <version>0.1.0</version>
  <description>The ROS sema gpio example</description>

  <maintainer email="chester.tseng@adlinktech.com">YuSheng Tseng</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/beginner_tutorials</url>
  <author email="chester.tseng@adlinktech.com">YuSheng Tseng</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
